# entity_typing

./: README.md  init.sh  main.py  pyproject.toml
data/buffer/7cd71cb1d99983667eaf13a1ed23917c/test/: dataset.arrow  state.json
data/buffer/7cd71cb1d99983667eaf13a1ed23917c/train/: dataset_info.json  state.json
data/buffer/7cd71cb1d99983667eaf13a1ed23917c/validation/: dataset.arrow  state.json
experiments/: context.gin  inscon.gin  inside.gin
src/: __init__.py  data.py  evaluator.py  train.py  utils.py
src/models/: abstract_model.py  context.py  inscon.py  inside.py
test/: test_main.py
